<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/menuFragment">

    <fragment
        android:id="@+id/menuFragment"
        android:name="com.adl.cafe.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu">
        <action
            android:id="@+id/action_menu_to_detail"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.adl.cafe.ui.detail.DetailFragment"
        android:label="@string/title_detail">
        <argument
            android:name="itemId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/cartFragment"
        android:name="com.adl.cafe.ui.cart.CartFragment"
        android:label="@string/title_cart">
        <action
            android:id="@+id/action_cart_to_checkout"
            app:destination="@id/checkoutFragment" />
    </fragment>

    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.adl.cafe.ui.checkout.CheckoutFragment"
        android:label="@string/title_checkout">
        <action
            android:id="@+id/action_checkout_to_confirmation"
            app:destination="@id/orderConfirmedFragment"
            app:popUpTo="@id/cartFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/orderConfirmedFragment"
        android:name="com.adl.cafe.ui.confirmation.OrderConfirmedFragment"
        android:label="@string/title_confirmation">
        <argument
            android:name="orderId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.adl.cafe.ui.orders.OrdersFragment"
        android:label="@string/title_orders" />

</navigation>
